# mep-cmap-analyser

./: .gitignore  LICENSE  MEP.icns  MEP_CMAP_Analyser.py  MEP_CMAP_Linux.spec  MEP_CMAP_Mac.spec  MEP_CMAP_Windows.spec  README.md  build_linux.py  build_log.txt  build_mac.py  build_windows.py  launcher.py  pyproject.toml  requirements.txt  splash_screen.py
.github/workflows/: release.yml
dist windows/MEP-CMAP Analyser v0.8.1/_internal/jsonschema-4.23.0.dist-info/: RECORD
dist windows/MEP-CMAP Analyser v0.8.1/_internal/mep_cmap/: __init__.py  app.py  bids.py  normalisation.py  pipeline.py  preferences.py  utils.py
dist windows/MEP-CMAP Analyser v0.8.3/_internal/mep_cmap/: __main__.py  app.py  compat.py  detection.py  inspector.py  io.py  pipeline.py
dist windows/MEP-CMAP Analyser v0.8.3/_internal/nbformat-5.10.4.dist-info/: RECORD
dist windows/MEP-CMAP Analyser v0.8.4/_internal/mep_cmap/: bids.py  filter_preview.py  stage2.py
dist windows/MEP-CMAP Analyser v0.8.4/_internal/numpy-2.4.4.dist-info/: RECORD
dist windows/MEP-CMAP Analyser v0.8.6/_internal/mep_cmap/: app.py  bids.py  pipeline.py  preferences.py  stage2.py
mep_cmap/: __init__.py  app.py  app_patch.py  bids.py  compat.py  dataset_session.py  detection.py  filter_preview.py  filters.py  format_wizard.py  inspector.py  io.py  pipeline.py  preferences.py  stage2.py
mep_cmap/detection/: __init__.py  bootstrap_baseline.py  csp_detection.py  onset_bigoni.py  onset_bigoni_walkback.py  onset_bootstrap.py  onset_peak_fraction.py  quantification.py
mep_cmap/formats/: __init__.py  cfwb.py  generic_tsv.py  kinemg_csv.py  labchart.py  spike2.py  spike2_smr.py
mep_cmap_io/: Cargo.toml  pyproject.toml
mep_cmap_io/src/: lib.rs
