[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mep-cmap-analyser"
dynamic = ["version"]
description = "BIDS-compliant TMS/EMG neurophysiology analysis tool for MEP and CMAP quantification"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Justin Andrushko", email = "justin.andrushko@northumbria.ac.uk" }
]
keywords = [
    "TMS", "EMG", "MEP", "CMAP", "neurophysiology",
    "cortical silent period", "BIDS", "motor evoked potential"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "PyWavelets>=1.4",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=5.13",
    "build",
    "twine",
]

[project.scripts]
mep-cmap = "mep_cmap:run_app"

[project.urls]
Homepage = "https://github.com/justinAndrushko/mep-cmap-analyser"
Repository = "https://github.com/justinAndrushko/mep-cmap-analyser"
"Bug Tracker" = "https://github.com/justinAndrushko/mep-cmap-analyser/issues"

[tool.setuptools.dynamic]
version = { attr = "mep_cmap.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["mep_cmap*"]
