[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mep-cmap-analyser"
version = "0.9.2"
description = "BIDS-compliant TMS/EMG neurophysiology analysis tool for MEP and CMAP quantification"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Justin Andrushko", email = "justin.andrushko@northumbria.ac.uk" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "PyWavelets>=1.4",
    "Pillow>=9.0",
]

[project.scripts]
mep-cmap = "mep_cmap:run_app"

[project.urls]
Homepage = "https://github.com/justinAndrushko/mep-cmap-analyser"
Repository = "https://github.com/justinAndrushko/mep-cmap-analyser"
"Bug Tracker" = "https://github.com/justinAndrushko/mep-cmap-analyser/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mep_cmap*"]